♻️ Refactor|代码重构 兼容 JDK 17，替换 Math.clamp 为通用写法
Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>